--- a/index.html
+++ b/index.html
@@ -2,30 +2,45 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Ember Starter Kit</title>
-  <link rel="stylesheet" href="css/normalize.css">
+  <title>Ember Presence List</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <script type="text/x-handlebars">
-    <h2>Welcome to Ember.js</h2>
+  <script type="text/x-handlebars" data-template-name="application">
+    <h2>Welcome to Ember Presence List</h2>
+
+    <hr>
 
     {{outlet}}
   </script>
 
-  <script type="text/x-handlebars" id="index">
-    <ul>
-    {{#each item in model}}
-      <li>{{item}}</li>
-    {{/each}}
-    </ul>
+  <script type="text/x-handlebars" data-template-name="guests">
+    <div class="container">
+      {{#each}}
+      <div class='row'>
+        <p class='pull-left'>{{name}}</p>
+        <p class='pull-right'>
+          {{#if guestHasAttended}}
+          <button type="button" class="btn btn-default btn-md" {{action "toggleAttendance" false}}>
+            <span class="glyphicon glyphicon-remove"></span>
+          </button>
+          {{else}}
+          <button type="button" class="btn btn-default btn-md" {{action "toggleAttendance" true}}>
+            <span class="glyphicon glyphicon-ok"></span>
+          </button>
+          {{/if}}
+        </p>
+      </div>
+      {{/each}}
+    </div>
+    
   </script>
 
   <script src="js/libs/jquery-1.10.2.js"></script>
   <script src="js/libs/handlebars-1.1.2.js"></script>
   <script src="js/libs/ember-1.7.0.js"></script>
+  <script src="js/libs/ember-data.js"></script>
   <script src="js/app.js"></script>
-  <!-- to activate the test runner, add the "?test" query string parameter -->
-  <script src="tests/runner.js"></script>
 </body>
 </html>
